@@ -507,3 +507,32 @@ appender.script.delete.size=1GB
 # See https://logging.apache.org/log4j/2.x/manual/configuration.html#System_Properties
 # e.g. path to your own log4j2 configuration file (relative to ${paths.data} unless absolute}
 #log4j2.configurationFile=path/to/log4j2.xml
+
+# Authentication settings
+authentication.token.enabled=true
+authentication.basic.enabled=true
+authentication.basic.realm=Mango
+authentication.session.maxSessions=10
+authentication.oauth2.enabled=false
+
+## OAuth2 client settings ##
+# comma separated list of client registration ids to enable
+oauth2.client.registrationIds=
+
+# pre-configured providers are google, github, facebook, okta and onelogin
+#oauth2.client.registration.{registrationId}.provider=onelogin
+#oauth2.client.registration.{registrationId}.clientId={your client id}
+#oauth2.client.registration.{registrationId}.clientSecret={your client secret}
+
+# add provider defaults for OneLogin, to use this provider you will need to configure your subdomain
+oauth2.client.provider.onelogin.userInfoAuthenticationMethod=header
+oauth2.client.provider.onelogin.userNameAttributeName=sub
+oauth2.client.provider.onelogin.clientAuthenticationMethod=basic
+oauth2.client.provider.onelogin.authorizationGrantType=authorization_code
+oauth2.client.provider.onelogin.scope=openid,name,profile,groups,email,params,phone
+oauth2.client.provider.onelogin.clientName=OneLogin
+#oauth2.client.provider.onelogin.authorizationUri=https://{your subdomain}.onelogin.com/oidc/2/auth
+#oauth2.client.provider.onelogin.tokenUri=https://{your subdomain}.onelogin.com/oidc/2/token
+#oauth2.client.provider.onelogin.jwkSetUri=https://{your subdomain}.onelogin.com/oidc/2/certs
+#oauth2.client.provider.onelogin.issuerUri=https://{your subdomain}.onelogin.com/oidc/2
+#oauth2.client.provider.onelogin.userInfoUri=https://{your subdomain}.onelogin.com/oidc/2/me
