@@ -28,6 +28,7 @@ import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.AuthenticationTrustResolver;
 import org.springframework.security.authentication.AuthenticationTrustResolverImpl;
 import org.springframework.security.authentication.DefaultAuthenticationEventPublisher;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.builders.WebSecurity;
@@ -465,6 +466,11 @@ public class MangoSecurityConfiguration {
             // Use the MVC Cors Configuration
             if (corsConfigurationSource.isPresent()) {
                 http.cors().configurationSource(corsConfigurationSource.get());
+            }
+
+            if (env.getRequiredProperty("authentication.oauth2.enabled", Boolean.class)) {
+                http.oauth2Login(Customizer.withDefaults());
+                http.oauth2Client();
             }
         }
     }
